Fix content overflow to scroll on mobile

--- a/_public/stylesheets/blog.css
+++ b/_public/stylesheets/blog.css
@@ -73,7 +73,8 @@ html {
   }
 
   .content {
-    max-width: 100%;
+    max-width: 100% !important;
+    overflow: scroll !important;
     padding: 0 !important;
   }
 
